[tool.poetry]
name = "brs"
version = "0.9.1"
description = "Post book data to Bruschetta web app."
authors = ["takatoh <takatoh.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
PyYAML = "^5.4.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brs = "brs.main:main"
