[tool.poetry]
name = "brs"
version = "0.9.4"
description = "Post book data to Bruschetta web app."
authors = ["takatoh <takatoh.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
PyYAML = "^6.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brs = "brs.main:main"
